src/c_api.h

typedef void * rwkvmobile_runtime_t;
typedef void * rwkvmobile_server_t;
struct sampler_params {
    float temperature;
    int top_k;
    float top_p;
};
struct penalty_params {
    float presence_penalty;
    float frequency_penalty;
    float penalty_decay;
};
struct token_ids {
    int * ids;
    int len;
};
struct rwkvmobile_server_config {
    const char * host;
    int port;
    int threads;
    const char * model_name;
    int default_max_tokens;
    float temperature;
    int top_k;
    float top_p;
    float presence_penalty;
    float frequency_penalty;
    float penalty_decay;
    int has_temperature;
    int has_top_k;
    int has_top_p;
    int has_presence_penalty;
    int has_frequency_penalty;
    int has_penalty_decay;
};
struct response_buffer {
    char * content;
    int length;
    int eos_found;
};
struct response_buffer_batch {
    char ** contents;
    int * lengths;
    int * eos_founds;
    int batch_size;
};
struct tts_streaming_buffer {
    float * samples;
    int length;
};
struct supported_batch_sizes {
    int * sizes;
    int length;
};
struct model_info {
    int model_id;
    char * model_path;
    char * backend_name;
    char * tokenizer_path;
    char * user_role;
    char * response_role;
    char * bos_token;
    char * eos_token;
    char * thinking_token;
    int is_generating;
    int vocab_size;
};
struct loaded_models_list {
    struct model_info * models;
    int count;
};
struct evaluation_results {
    int * corrects;
    float * logits_vals;
    int count;
    char ** output_texts;
};
struct web_rwkv_args {
    int quant_type;    // 0: fp, 1: int8, 2: nf4
    int quant_layers;
};
struct batch_tokens_count {
    int * counts;
    int batch_size;
};
enum {
    FORCE_LANG_NONE = 0,
    FORCE_LANG_CHN = 1,
};
int rwkvmobile_runtime_eval_chat_with_history_async(rwkvmobile_runtime_t handle, int model_id, const char ** inputs,
    const int num_inputs, const int max_tokens, void (*callback)(const char *, const int, const char *),
    int enable_reasoning, int force_reasoning, int force_lang, int add_generation_prompt
);
int rwkvmobile_runtime_gen_completion_async(rwkvmobile_runtime_t runtime, int model_id, const char * prompt, const int max_tokens, const int stop_code, void (*callback)(const char *, const int, const char *), int disable_cache);
int rwkvmobile_runtime_gen_completion_batch_async(rwkvmobile_runtime_t runtime, int model_id, const char ** prompts, const int batch_size, const int max_tokens, const int stop_code, void (*callback_batch)(const int, const char **, const int*, const char **), int disable_cache);
int rwkvmobile_runtime_eval_chat_batch_with_history_async(rwkvmobile_runtime_t handle, int model_id, const char *** inputs, const int * num_inputs,
    const int batch_size, const int max_tokens, void (*callback_batch)(const int, const char **, const int*, const char **),
    int enable_reasoning, int force_reasoning, int force_lang, int add_generation_prompt
);
int rwkvmobile_runtime_gen_completion(rwkvmobile_runtime_t runtime, int model_id, const char * prompt, const int max_tokens, const int stop_code, void (*callback)(const char *, const int, const char *), int disable_cache);
// logging

enum {
    RWKV_LOG_LEVEL_DEBUG = 0,
    RWKV_LOG_LEVEL_INFO,
    RWKV_LOG_LEVEL_WARN,
    RWKV_LOG_LEVEL_ERROR,
};
// get loaded models info
int rwkvmobile_runtime_get_loaded_model_ids(rwkvmobile_runtime_t runtime, int * model_ids, int max_count);
struct loaded_models_list rwkvmobile_runtime_get_loaded_models_info(rwkvmobile_runtime_t runtime);
void rwkvmobile_runtime_free_loaded_models_list(struct loaded_models_list list);
const char * rwkvmobile_runtime_get_model_path_by_id(rwkvmobile_runtime_t runtime, int model_id);
// conversion
int rwkvmobile_convert_pth_to_safetensors(const char * pth_path, const char * st_path);