examples/flutter/ffigen/rwkv_mobile.dart


int rwkvmobile_runtime_get_loaded_model_ids(rwkvmobile_runtime_t runtime,
ffi.Pointer<ffi.Int> model_ids,
int max_count,
) {
  return _rwkvmobile_runtime_get_loaded_model_ids(runtime,
model_ids,
max_count,
);
}

late final _rwkvmobile_runtime_get_loaded_model_idsPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_runtime_t , ffi.Pointer<ffi.Int> , ffi.Int )>>('rwkvmobile_runtime_get_loaded_model_ids');
late final _rwkvmobile_runtime_get_loaded_model_ids = _rwkvmobile_runtime_get_loaded_model_idsPtr.asFunction<int Function(rwkvmobile_runtime_t , ffi.Pointer<ffi.Int> , int )>();

loaded_models_list rwkvmobile_runtime_get_loaded_models_info(rwkvmobile_runtime_t runtime,
) {
  return _rwkvmobile_runtime_get_loaded_models_info(runtime,
);
}

late final _rwkvmobile_runtime_get_loaded_models_infoPtr = _lookup<
    ffi.NativeFunction<loaded_models_list Function(rwkvmobile_runtime_t )>>('rwkvmobile_runtime_get_loaded_models_info');
late final _rwkvmobile_runtime_get_loaded_models_info = _rwkvmobile_runtime_get_loaded_models_infoPtr.asFunction<loaded_models_list Function(rwkvmobile_runtime_t )>();

void rwkvmobile_runtime_free_loaded_models_list(loaded_models_list list,
) {
  return _rwkvmobile_runtime_free_loaded_models_list(list,
);
}

late final _rwkvmobile_runtime_free_loaded_models_listPtr = _lookup<
    ffi.NativeFunction<ffi.Void Function(loaded_models_list )>>('rwkvmobile_runtime_free_loaded_models_list');
late final _rwkvmobile_runtime_free_loaded_models_list = _rwkvmobile_runtime_free_loaded_models_listPtr.asFunction<void Function(loaded_models_list )>();

ffi.Pointer<ffi.Char> rwkvmobile_runtime_get_model_path_by_id(rwkvmobile_runtime_t runtime,
int model_id,
) {
  return _rwkvmobile_runtime_get_model_path_by_id(runtime,
model_id,
);
}

late final _rwkvmobile_runtime_get_model_path_by_idPtr = _lookup<
    ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(rwkvmobile_runtime_t , ffi.Int )>>('rwkvmobile_runtime_get_model_path_by_id');
late final _rwkvmobile_runtime_get_model_path_by_id = _rwkvmobile_runtime_get_model_path_by_idPtr.asFunction<ffi.Pointer<ffi.Char> Function(rwkvmobile_runtime_t , int )>();

int rwkvmobile_convert_pth_to_safetensors(ffi.Pointer<ffi.Char> pth_path,
ffi.Pointer<ffi.Char> st_path,
) {
  return _rwkvmobile_convert_pth_to_safetensors(pth_path,
st_path,
);
}

late final _rwkvmobile_convert_pth_to_safetensorsPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char> , ffi.Pointer<ffi.Char> )>>('rwkvmobile_convert_pth_to_safetensors');
late final _rwkvmobile_convert_pth_to_safetensors = _rwkvmobile_convert_pth_to_safetensorsPtr.asFunction<int Function(ffi.Pointer<ffi.Char> , ffi.Pointer<ffi.Char> )>();

}

final class sampler_params extends ffi.Struct{
  @ffi.Float()
  external double temperature;

  @ffi.Int()
  external int top_k;

  @ffi.Float()
  external double top_p;

}

final class penalty_params extends ffi.Struct{
  @ffi.Float()
  external double presence_penalty;

  @ffi.Float()
  external double frequency_penalty;

  @ffi.Float()
  external double penalty_decay;

}

final class token_ids extends ffi.Struct{
  external ffi.Pointer<ffi.Int> ids;

  @ffi.Int()
  external int len;

}

final class rwkvmobile_server_config extends ffi.Struct{
  external ffi.Pointer<ffi.Char> host;

  @ffi.Int()
  external int port;

  @ffi.Int()
  external int threads;

  external ffi.Pointer<ffi.Char> model_name;

  @ffi.Int()
  external int default_max_tokens;

  @ffi.Float()
  external double temperature;

  @ffi.Int()
  external int top_k;

  @ffi.Float()
  external double top_p;

  @ffi.Float()
  external double presence_penalty;

  @ffi.Float()
  external double frequency_penalty;

  @ffi.Float()
  external double penalty_decay;

  @ffi.Int()
  external int has_temperature;

  @ffi.Int()
  external int has_top_k;

  @ffi.Int()
  external int has_top_p;

  @ffi.Int()
  external int has_presence_penalty;

  @ffi.Int()
  external int has_frequency_penalty;

  @ffi.Int()
  external int has_penalty_decay;

}

final class response_buffer extends ffi.Struct{
  external ffi.Pointer<ffi.Char> content;

  @ffi.Int()
  external int length;

  @ffi.Int()
  external int eos_found;

}

final class response_buffer_batch extends ffi.Struct{
  external ffi.Pointer<ffi.Pointer<ffi.Char>> contents;

  external ffi.Pointer<ffi.Int> lengths;

  external ffi.Pointer<ffi.Int> eos_founds;

  @ffi.Int()
  external int batch_size;

}

final class tts_streaming_buffer extends ffi.Struct{
  external ffi.Pointer<ffi.Float> samples;

  @ffi.Int()
  external int length;

}

final class supported_batch_sizes extends ffi.Struct{
  external ffi.Pointer<ffi.Int> sizes;

  @ffi.Int()
  external int length;

}

final class model_info extends ffi.Struct{
  @ffi.Int()
  external int model_id;

  external ffi.Pointer<ffi.Char> model_path;

  external ffi.Pointer<ffi.Char> backend_name;

  external ffi.Pointer<ffi.Char> tokenizer_path;

  external ffi.Pointer<ffi.Char> user_role;

  external ffi.Pointer<ffi.Char> response_role;

  external ffi.Pointer<ffi.Char> bos_token;

  external ffi.Pointer<ffi.Char> eos_token;

  external ffi.Pointer<ffi.Char> thinking_token;

  @ffi.Int()
  external int is_generating;

  @ffi.Int()
  external int vocab_size;

}

final class loaded_models_list extends ffi.Struct{
  external ffi.Pointer<model_info> models;

  @ffi.Int()
  external int count;

}

final class evaluation_results extends ffi.Struct{
  external ffi.Pointer<ffi.Int> corrects;

  external ffi.Pointer<ffi.Float> logits_vals;

  @ffi.Int()
  external int count;

  external ffi.Pointer<ffi.Pointer<ffi.Char>> output_texts;

}

final class web_rwkv_args extends ffi.Struct{
  @ffi.Int()
  external int quant_type;

  @ffi.Int()
  external int quant_layers;

}

final class batch_tokens_count extends ffi.Struct{
  external ffi.Pointer<ffi.Int> counts;

  @ffi.Int()
  external int batch_size;

}

typedef rwkvmobile_runtime_t = ffi.Pointer<ffi.Void>;
typedef rwkvmobile_server_t = ffi.Pointer<ffi.Void>;

const int FORCE_LANG_NONE = 0;


const int FORCE_LANG_CHN = 1;


const int RWKV_LOG_LEVEL_DEBUG = 0;


const int RWKV_LOG_LEVEL_INFO = 1;


const int RWKV_LOG_LEVEL_WARN = 2;


const int RWKV_LOG_LEVEL_ERROR = 3;

